# Bund

./: .gitignore  .t.sh.swp  Cargo.toml  README.md  bund_client.json5  t.sh
Documentation/Bund_Library_Guide/: BUND_standard_lisbrary_reference.typ  Content.typ  Finish.typ  How_to_use.typ  Introduction.typ  Introduction_the_art_of_stack_operations.typ  Introduction_translation.typ  Library.typ  Library_introduction.typ  License.typ  Makefile  Title.typ  Title_abstract.typ  Title_dedication.typ  globals.typ  index.csv  index_unsorted.csv  init_directories.sh
Documentation/Bund_Library_Guide/_proto/: algorithm.typ  description.typ  index.typ  sample.typ
Documentation/RELEASE_NOTES/: Release_Note_0.10.0.md  Release_Note_0.11.0.md  Release_Note_0.12.0.md  Release_Note_0.14.0.md  Release_Note_0.15.0.md  Release_Note_0.3.0.md  Release_Note_0.4.0.md  Release_Note_0.5.0.md  Release_Note_0.6.0.md  Release_Note_0.7.0.md  Release_Note_0.8.0.md  Release_Note_0.9.0.md
examples/: README.md  classifier_linguistic_demo.bund  classifier_linguistic_tokens_demo.bund  classifier_naivebayes_demo.bund  classifier_profanity_demo.bund  conditional_move_to_workbench.bund  configuration_create.bund  data_analysis_fmt_with_template.bund  data_analysis_fmt_with_template.md  estimator_demo.bund  estimator_demo_with_generator.bund  estimator_demo_with_generator_and_fmt.bund  estimator_demo_with_generator_checking_outliers.bund  estimator_demo_with_generator_checking_outliers_dbscan.bund  forecast_mstl_demo.bund  helloworld.bund  helloworld_lambda.bund  json_answer.bund  perceptron_operation_and.bund  perceptron_operation_and_saving_model.bund  perceptron_operation_and_with_load_model.bund  periodic_detector_demo.bund  sequence_generate_1.bund  sequence_generate_2.bund  sequence_generate_3.bund  sequence_generate_4.bund
examples/ai/: deepseek_api_demo.bund  llm_local_gen_embeddings.bund  main.bund  make_perceptron.bund  make_xy.bund  ollama_api_demo.bund  predict_from_gen.bund  prepare_traning_dataset_1.bund  prepare_traning_dataset_2.bund
examples/audio/: tts_basic_demo.bund
examples/bund_dynamic_demos/: compile_and_apply.bund  create_lambda_on_the_fly.bund  create_lambda_on_the_fly_in_the_context.bund  dynamic_demo_1.bund  dynamic_demo_2.bund  dynamic_demo_3.bund  dynamic_demo_4.bund  if_word.bund  resolving_lambda.bund
examples/code_snippets/: application_conditional_demos.bund  application_logic_demos.bund  bund_shell.bund  context_executuion_demo1.bund  context_executuion_demo2.bund  context_variable_demo.bund  curry_demo.bund  fmt_conditional_demo.bund  fmt_conditional_with_display_demo.bund  generate_100_random_first_names.bund  generate_25_loorem_ipsum_strings.bund  internal_bus_demo.bund  interpolation_demo.bund  number_of_lines_in_file.bund  print_message_passed_from_cli.bund  print_message_passed_from_cli_with_default.bund  pull_demo.bund  secure_random_gen.bund  sorting_numbers_in_list.bund  string_wrap_demo.bund  textexpression_demo.bund  tryexcept_demo.bund  tryexcept_demo_divide_to_0.bund  tryexcept_demo_with_error_execute.bund
examples/console/: spinner_demo.bund  text_color_demo.bund  typewriter_demo.bund
examples/data/: csv_file_read_demo_1.bund  csv_file_read_demo_2.bund  csv_file_read_demo_2.md  internaldb_demo.bund  internaldb_demo_with_prql.bund  sqlite3_demo_1.bund  sqlite3_demo_2.bund
examples/data_sets/: README.md  create_sample_db_sqlite3.sh  sample.csv  sample.db  sample_noheader.csv  sample_sqlite3.sql  test.db
examples/distributed/: hello_distributed_world.bund  hello_distributed_world_with_value.bund
examples/generators/: generator_graph.bund  generator_lognormal.bund  generator_normal.bund  generator_normal_1.bund  generator_normal_with_comma.bund  generator_periodic.bund  generator_periodic_graph.bund  generator_sawtooth.bund  generator_sawtooth_graph.bund  generator_sinusoidal.bund  generator_square_graph.bund  generator_uniform.bund
examples/graph_algorithms/: more_complex_graph_shortpath.bund  simple_graph_allshortpath.bund  simple_graph_dijkstra.bund  simple_graph_shortpath.bund  simple_graph_transitiveclosure.bund
examples/image/: image_blur_and_save.bund  image_detectfaces.bund  image_export.bund  image_print.bund  image_print_blur.bund  image_print_brighten.bund  image_print_contrast.bund  image_print_crop.bund  image_print_grayscale.bund  image_print_thumbnail.bund  image_upscale_and_save.bund
examples/object_oriented_programming/: class_constructors_demo.bund  class_display_demo_2.bund  class_hierarhy_call_method.bund  class_hierarhy_get_values.bund  create_class_demo.bund  create_class_hierarhy_demo.bund  create_object.bund  intervals_demo.bund  is_demo.bund  object_call_method.bund  object_execute.bund  object_get_value.bund  value_demo.bund  wrap_unwrap_demo.bund
src/: bund.pest  main.rs
src/cmd/: brun.rs  bshell.rs  bund_bbus.rs  bund_bootstrap.rs  bund_bus.rs  bund_cluster.rs  bund_display_banner.rs  bund_eval.rs  bund_load.rs  bund_script.rs  bund_shell.rs  bund_test.rs  bund_version.rs  bund_wscript.rs  bversion.rs  mod.rs  setenv.rs  setloglevel.rs
src/lang/: mod.rs  parse.rs
src/stdlib/: banner.rs  mod.rs
src/stdlib/bund/: mod.rs
src/stdlib/functions/: create_aliases.rs  mod.rs
src/stdlib/helpers/: conf.rs  eval.rs  file_helper.rs  filesystem_helper.rs  internaldb.rs  json_api.rs  mod.rs  print_error.rs  run_snippet.rs  tts.rs
src/twostack/: error.rs  mod.rs  value.rs
src/twostack/v/: mod.rs
src/vm/: bundcontext.rs  bundfunction.rs  bundstate.rs  bundstatecodeblock.rs  codeblockctx.rs  eoi.rs  error.rs  float.rs  ident.rs  integer.rs  lfb.rs  literal.rs  ltb.rs  mod.rs  prefix.rs  rfb.rs  rtb.rs  string.rs  suffix.rs  tag.rs  token.rs  traceback.rs  unknown.rs  vm.rs
tests/: arithmentic_int_base.bund  arithmentic_mix_base.bund  string_concatenation.bund  test_always_true.bund  test_always_true_but_leaving_garbage.bund  test_loop_loop.bund  test_map_loop.bund  test_times_loop.bund  testing_if.bund  testing_ifthenelse.bund  testing_sorting_numbers_in_list.bund  testing_tryexcept.bund
(+494 files in other folders)
