[package]
name = "bund"
version = "0.8.0"
edition = "2021"
description = "Interpreter and CLI for a Virtual Machine for BUND programming language"
license-file = "LICENSE"
repository = "https://github.com/vulogov/Bund"
categories = ["compilers"]
keywords = ["language", "stack", "concatenative", "lambda", "dynamic"]

[dependencies]
bund_language_parser = ">=0.*.*"
bundcore = ">=0.*.*"
clap = { version = "4.5.18", features = ["derive"] }
curl = "0.4.46"
easy-error = "1.0.0"
easy_reader = "0.5.2"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
path-absolutize = "3.1.1"
rust_dynamic = ">=0.*.*"
rust_multistackvm = ">=0.*.*"
rustyline = { version = "14.*.*", features = ["with-file-history"] }
yansi = "1.0.1"
os_info = "3"
comfy-table = "7.1.1"
sys_metrics = "0.2.7"
memory-stats = "1.2.0"
humanize = "0.0.1"
humansize = "2.1.3"
sanitize-filename = "0.5.0"
wildmatch = "2.4.0"
fancy-regex = "0.14.0"
fs_extra = "1.3.0"
const-str = "0.5.7"
cfonts = "1.2.0"
scan_dir = "0.3.3"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
base64ct = { version="1.6.*", features = ["alloc"] }
rust_multistack = "0.31.0"
distance = "0.4.0"
fuzzy-matcher = "0.3.7"
voca_rs = "1.15.2"
proctitle = "0.1.1"
sudo = "0.6.0"
decorum = "0.3.1"
markov-chain = "0.1.1"
rstats = "2.1.12"

[dependencies.rusqlite]
version = "0.32.*"
features = ["bundled"]
