[package]
name = "bund"
version = "0.14.0"
edition = "2021"
description = "Interpreter and CLI for a Virtual Machine for BUND programming language"
license-file = "LICENSE"
repository = "https://github.com/vulogov/Bund"
categories = ["compilers"]
keywords = ["language", "stack", "concatenative", "lambda", "dynamic"]

[dependencies]
bund_language_parser = ">=0.*.*"
bundcore = ">=0.*.*"
clap = { version = "4.5.18", features = ["derive"] }
curl = "0.4.46"
easy-error = "1.0.0"
easy_reader = "0.5.2"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
path-absolutize = "3.1.1"
rust_dynamic = ">=0.*.*"
rust_multistackvm = ">=0.*.*"
rustyline = { version = "14.*.*", features = ["with-file-history"] }
yansi = "1.0.1"
os_info = "3"
comfy-table = "7.1.1"
sys_metrics = "0.2.7"
memory-stats = "1.2.0"
humanize = "0.0.1"
humansize = "2.1.3"
sanitize-filename = "0.5.0"
wildmatch = "2.4.0"
fancy-regex = "0.14.0"
fs_extra = "1.3.0"
const-str = "0.5.7"
cfonts = "1.2.0"
scan_dir = "0.3.3"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
base64ct = { version="1.6.*", features = ["alloc"] }
rust_multistack = ">=0.*.*"
distance = "0.4.0"
fuzzy-matcher = "0.3.7"
voca_rs = "1.15.2"
proctitle = "0.1.1"
sudo = "0.6.0"
decorum = "0.3.1"
markov-chain = "0.1.1"
rstats = "2.1.12"
ta = "0.5.0"
mathlab = "1.2.0"
statrs = "0.18.0"
rand = "0.8.5"
csv-core = "0.1.11"
neurons = "2.6.2"
natural = "0.5.0"
lingua = "1.6.2"
rnltk = "0.4.0"
duct_sh = "0.13.7"
grok = "2.0.0"
rand_mt = "4.2.2"
fastrand = "2.3.0"
argmap = "1.1.2"
nanohtml2text = "0.2.1"
charabia = "0.9.2"
zenoh = "1.1.0"
rasciigraph = "0.2.0"
time-graph = { version="0.3.2", features=["table"] }
unix_path = "1.0.1"
unix_str = "1.0.0"
fakeit = "1.3.0"
lipsum = "0.9.1"
rusty_math = "0.7.0"
ulid = "1.1.4"
passwords = "3.1.16"
algos = { version="0.6.*", git="https://github.com/Brad-Edwards/algos.git" }
local-ip-address = "0.6.3"
sys-locale = "0.3.2"
leon = "3.0.2"
dryoc = "0.6.2"
deunicode = "1.6.0"
termimad = "0.31.2"
convert_case = "0.7.1"
fast_paths = "1.0.0"
hexdump = "0.1.2"
bytemuck = "1.21.0"
distimate = "0.2.1"
anomaly_detection = "0.3.0"
breakout = "0.3.0"
filesystem = "0.4.4"
polars = "0.46.0"
polars-core = "0.46.0"
polars-io = "0.46.0"
prqlc = "0.13.3"


[dependencies.rusqlite]
version = "0.32.*"
features = ["bundled"]

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
